# pysonet

./: .env.dev  .gitignore  Dockerfile  Readme.md  docker-compose.yml  entrypoint.sh  notes.md  pyproject.toml
config/: settings.py  urls.py
src/: routers.py
src/base/: classes.py  permissions.py  serializers.py
src/comments/: models.py
src/profiles/: models.py  serializers.py  urls.py  views.py
src/profiles/migrations/: 0001_initial.py  0002_auto_20240606_0601.py  0003_auto_20240606_0624.py  0004_auto_20240606_0637.py  0005_auto_20240610_0557.py  0006_auto_20240827_1152.py
src/wall/: admin.py  models.py  serializers.py  urls.py  views.py
src/wall/migrations/: 0001_initial.py
